# facet-actix

./: Cargo.toml  README.md
examples/actix_web_server/: Cargo.toml
examples/actix_web_server/src/: main.rs
src/: form.rs  json.rs  lib.rs
