[package]
name = "facet-actix"
version = "0.1.0"
authors = ["Tamo <tamo@meilisearch.com>"]
license = "MIT OR Apache-2.0"
description = "Glue crate between actix-web and facet"
repository = "https://github.com/irevoire/facet-actix"
documentation = "https://docs.rs/facet-actix"
readme = "README.md"
edition = "2024"

[workspace]
members = ["examples/*"]

[dependencies]
actix-web = "4.13.0"
facet = {git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = {git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = {git = "https://github.com/facet-rs/facet", branch = "main" }
facet-urlencoded = {git = "https://github.com/facet-rs/facet", branch = "main" }
